# workout_tracer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  READMD.md  config.py  ocr_test.py  pyproject.toml
docs/: HISTORY.md  (+2 more)
main/: .clang-tidy  AGENTS.md  CMakeLists.txt  build.sh  main.cpp  main_app.cpp  main_cli.cpp  mapping.json
main/.agent/workflows/: workout-calculator-refactor.md
main/cmake/: SourceFileCollection.cmake  TargetSetup.cmake
main/common/: JsonReader.h  TxtFileReader.h  parsed_data.h
main/controller/: ActionHandler.cpp  ActionHandler.h
main/db_inserter/: DataManager.cpp  SqliteManager.cpp  SqliteManager.h
main/db_inserter/_internal/: Database.cpp
main/reprocessor/: Reprocessor.cpp  Reprocessor.h
main/reprocessor/data_processor/: DataProcessor.cpp  DataProcessor.h
main/reprocessor/date_processor/: DateProcessor.h
main/reprocessor/log_formatter/: LogFormatter.cpp
main/reprocessor/log_parser/: LogParser.cpp
main/reprocessor/validator/: Validator.cpp  Validator.h
main/reprocessor/volume_calculator/: VolumeCalculator.cpp  VolumeCalculator.h
main/scripts/: build.py  build.sh  build_config.toml  build_fast.sh  build_tidy.sh  format.sh  refactor.py
main/scripts/builder/: common.py  linter.py  orchestrator.py  workflow.py
main/scripts/sh/build-sh/: check_lint.sh  fast.sh  full.sh
main/scripts/sh/refactor/: format.sh
main/scripts/workflow/: __init__.py  log_analyzer.py  task_manager.py  task_splitter.py
main/src/: main_app.cpp  main_cli.cpp  pch.hpp
main/src/application/: action_handler.cpp  action_handler.hpp  database_handler.cpp  database_handler.hpp  file_processor_handler.cpp  file_processor_handler.hpp
main/src/application/interfaces/: i_log_parser.hpp  i_mapping_provider.hpp
main/src/cli/: CommandLineParser.cpp  CommandLineParser.hpp  command_line_parser.hpp
main/src/cli/commands/: export_command.hpp  ingest_command.hpp  insert_command.hpp  query_cycles_command.hpp  query_pr_command.hpp  validate_command.hpp
main/src/cli/framework/: application.cpp  application.hpp  command.hpp
main/src/common/: CJsonHelper.hpp  FileReader.cpp  FileReader.hpp  JsonReader.cpp  JsonReader.hpp  c_json_helper.hpp  file_reader.cpp  json_reader.hpp  parsed_data.hpp  version.hpp
main/src/config/: mapping.json
main/src/controller/: ActionHandler.cpp  ActionHandler.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  FileProcessorHandler.cpp  FileProcessorHandler.hpp
main/src/db/facade/: DbFacade.cpp  DbFacade.hpp
main/src/db/inserter/: DataInserter.cpp  DataInserter.hpp
main/src/db/manager/: DbManager.cpp  DbManager.hpp
main/src/domain/models/: workout_item.hpp
main/src/domain/services/: date_service.cpp  date_service.hpp  volume_service.cpp
main/src/infrastructure/config/: file_mapping_provider.hpp
main/src/infrastructure/converter/: Converter.cpp  log_parser.cpp  log_parser.hpp  project_name_mapper.hpp
main/src/infrastructure/persistence/facade/: db_facade.cpp  db_facade.hpp  query_facade.cpp  query_facade.hpp
main/src/infrastructure/persistence/inserter/: data_inserter.hpp
main/src/infrastructure/persistence/manager/: db_manager.cpp
main/src/infrastructure/reporting/database/: database_manager.cpp
main/src/infrastructure/reporting/facade/: report_facade.cpp
main/src/infrastructure/reporting/formatter/: markdown_formatter.cpp  markdown_formatter.hpp
main/src/infrastructure/serializer/: Serializer.cpp
main/src/infrastructure/validation/: Validator.cpp
main/src/infrastructure/validation/internal/: line_validator.cpp  line_validator.hpp
main/src/report/database/: DatabaseManager.cpp  DatabaseManager.hpp
main/src/report/facade/: ReportFacade.cpp  ReportFacade.hpp
main/src/report/formatter/: MarkdownFormatter.cpp  MarkdownFormatter.hpp
main/src/reprocessor/facade/: Reprocessor.cpp  Reprocessor.hpp
main/src/reprocessor/preprocessor/: Preprocessor.cpp  Preprocessor.hpp
main/src/reprocessor/validator/: LineValidator.cpp  LineValidator.hpp  Validator.cpp  Validator.hpp
workout_calculator/: CMakeLists.txt  build.py  build.sh  mapping.json
workout_calculator/src/: main_app.cpp  main_cli.cpp  pch.hpp
workout_calculator/src/common/: JsonReader.cpp  TxtFileReader.cpp  parsed_data.h  parsed_data.hpp
workout_calculator/src/config/: mapping.json
workout_calculator/src/controller/: ActionHandler.cpp  ActionHandler.h  ActionHandler.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  FileProcessorHandler.cpp  FileProcessorHandler.hpp
workout_calculator/src/db/: DbFacade.cpp  DbFacade.hpp  DbInsertor.cpp  DbInsertor.hpp  DbManager.cpp  DbManager.hpp  TrainingDataInserter.cpp  TrainingDataInserter.hpp
workout_calculator/src/db/facade/: DbFacade.cpp  DbFacade.hpp
workout_calculator/src/db/inserter/: DataInserter.hpp
workout_calculator/src/db/manager/: DbManager.cpp
workout_calculator/src/db_inserter/: DataManager.cpp  DataManager.h  DataManager.hpp
workout_calculator/src/db_inserter/_internal/: Database.cpp  Database.h  LogRepository.cpp  LogRepository.h  LogRepository.hpp
workout_calculator/src/report/: ReportGenerator.cpp  ReportGenerator.hpp
workout_calculator/src/report/database/: DatabaseManager.cpp  DatabaseManager.hpp
workout_calculator/src/report/facade/: ReportFacade.cpp
workout_calculator/src/report/formatter/: MarkdownFormatter.cpp  MarkdownFormatter.hpp
workout_calculator/src/reprocessor/: Reprocessor.cpp  Reprocessor.h  Reprocessor.hpp
workout_calculator/src/reprocessor/date_processor/: DateProcessor.cpp  DateProcessor.hpp
workout_calculator/src/reprocessor/facade/: Reprocessor.cpp  Reprocessor.hpp
workout_calculator/src/reprocessor/log_formatter/: JsonFormatter.cpp  JsonFormatter.hpp  LogFormatter.cpp  LogFormatter.h  LogFormatter.hpp
workout_calculator/src/reprocessor/log_parser/: LogParser.cpp  LogParser.h  LogParser.hpp
workout_calculator/src/reprocessor/name_mapper/: ProjectNameMapper.cpp  ProjectNameMapper.hpp
workout_calculator/src/reprocessor/validator/: Validator.cpp  Validator.hpp
workout_calculator/src/reprocessor/volume_calculator/: VolumeCalculator.cpp
(+337 files in other folders)
